Add counts to assertion browse tables

--- a/client/src/app/views/assertions/assertions-home/assertions-home.page.html
+++ b/client/src/app/views/assertions/assertions-home/assertions-home.page.html
@@ -8,7 +8,7 @@
     <nz-row>
       <nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-assertions-table></cvc-assertions-table>
+          <cvc-assertions-table cvcTitle="Browse Assertions"></cvc-assertions-table>
         </div>
       </nz-col>
     </nz-row>
