--- a/client/src/app/views/curation/curation-queues/pending-assertions/pending-assertions.page.html
+++ b/client/src/app/views/curation/curation-queues/pending-assertions/pending-assertions.page.html
@@ -1,1 +1,1 @@
-<cvc-assertions-table [status]="status"></cvc-assertions-table>
+<cvc-assertions-table [status]="status" cvcTitle="Browse Pending Assertions"></cvc-assertions-table>
