--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
@@ -203,9 +203,7 @@
       </nz-space>
     </nz-col>
   </nz-row>
-  <cvc-entity-table-card [cvcTitle]="assertionsCardTitle" *nzSpaceItem>
-    <cvc-assertions-table [evidenceId]="evidence.id"></cvc-assertions-table>
-  </cvc-entity-table-card>
+  <cvc-assertions-table [evidenceId]="evidence.id" [cvcTitleTemplate]="assertionsCardTitle" *nzSpaceItem></cvc-assertions-table>
   <ng-template #assertionsCardTitle>
     <i nz-icon nzType="civic:assertion"></i>
     {{ evidence.name }} Assertions
