--- a/client/src/app/views/users/users-assertions/users-assertions.component.html
+++ b/client/src/app/views/users/users-assertions/users-assertions.component.html
@@ -1,6 +1,4 @@
-<cvc-entity-table-card [cvcTitle]="assertionsCardTitle">
-  <cvc-assertions-table [userId]="userId"></cvc-assertions-table>
-</cvc-entity-table-card>
+<cvc-assertions-table [userId]="userId" [cvcTitleTemplate]="assertionsCardTitle"></cvc-assertions-table>
 <ng-template #assertionsCardTitle>
   <i nz-icon nzType="civic:assertion"></i>
   User Assertions
