--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -104,6 +104,7 @@
         nzAlign="center">
         <nz-select nzAllowClear
           nzPlaceHolder="Choose"
+          [nzDropdownMatchSelectWidth]="false"
           (ngModelChange)="onModelChanged()"
           [(ngModel)]="assertionTypeInput">
           <nz-option nzValue="PREDICTIVE"
@@ -119,6 +120,7 @@
       <th nzWidth="5%"
         nzAlign="center">
         <nz-select nzAllowClear
+          [nzDropdownMatchSelectWidth]="false"
           nzPlaceHolder="Choose"
           (ngModelChange)="onModelChanged()"
           [(ngModel)]="assertionDirectionInput">
@@ -133,6 +135,7 @@
       <th nzWidth="5%"
         nzAlign="center">
         <nz-select nzAllowClear
+          [nzDropdownMatchSelectWidth]="false"
           nzPlaceHolder="Choose"
           (ngModelChange)="onModelChanged()"
           [(ngModel)]="clinicalSignificanceInput">
@@ -179,6 +182,7 @@
       <th nzWidth="5%"
         nzAlign="center">
         <nz-select nzAllowClear
+          [nzDropdownMatchSelectWidth]="false"
           nzPlaceHolder="Choose"
           (ngModelChange)="onModelChanged()"
           [(ngModel)]="ampLevelInput">
