--- a/client/src/app/views/sources/sources-detail/sources-detail.view.html
+++ b/client/src/app/views/sources/sources-detail/sources-detail.view.html
@@ -24,6 +24,7 @@
       </cvc-link-tag>
     </nz-page-header-extra>
     <nz-page-header-content>
+        <cvc-tab-navigation [tabs]="this.tabs"></cvc-tab-navigation>
       <div class="content">
         <router-outlet></router-outlet>
       </div>
