show number of outstanding revisions as a badge on the revisions tab. closes #359

--- a/client/src/app/components/shared/tab-navigation/tab-navigation.component.html
+++ b/client/src/app/components/shared/tab-navigation/tab-navigation.component.html
@@ -10,6 +10,7 @@
         <a *nzTabLink nz-tab-link [routerLink]="tab.routeName">
           <i nz-icon [nzType]="tab.iconName"></i>
           {{tab.tabLabel}}
+          <nz-badge nzStandalone [nzCount]="tab.badgeCount" nzTitle="There are {{tab.badgeCount}} outstanding revisions." [nzStyle]="{transform: 'scale(0.75, 0.75) translate(0, -2px)'}"></nz-badge>
         </a>
       </nz-tab>
     </nz-tabset>
