--- a/client/src/app/components/users/users-table/users-table.component.html
+++ b/client/src/app/components/users/users-table/users-table.component.html
@@ -6,7 +6,7 @@
   <thead (nzSortOrderChange)="onSortChanged($event)">
     <tr>
       <th nzWidth="5%">
-          Tag
+          Username
       </th>
       <th nzWidth="15%"
           [nzColumnKey]="sortColumns.Name"
