--- a/client/src/app/views/variant-groups/variant-groups-detail/variant-groups-detail.view.html
+++ b/client/src/app/views/variant-groups/variant-groups-detail/variant-groups-detail.view.html
@@ -56,7 +56,7 @@
       </nz-page-header-extra>
 
       <nz-page-header-content>
-        <cvc-tab-navigation [tabs]="this.tabs">
+        <cvc-tab-navigation [tabs]="this.tabs$ | ngrxPush">
           <ng-template #tabBarExtraContent>
             <nz-col id="contributors-col">
               <cvc-contributor-avatars [subscribable]="subscribable"></cvc-contributor-avatars>
