--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -22,10 +22,16 @@
         border-bottom: 1px solid #f0f0f0;
       }
     }
+    .user-bio {
+      .ant-descriptions-view {
+        border-top: 1px solid #f0f0f0;
+      }
+    }
     .user-coi {
       .ant-descriptions-header {
         margin: 0;
         padding: 0 12px;
+        border-top: 1px solid #f0f0f0;
         .ant-descriptions-title {
           padding: 6px 0;
           font-weight: normal;
@@ -33,6 +39,7 @@
           font-weight: 500;
         }
       }
+      
       .ant-descriptions-view {
         // add top border to descriptions block
         border-top: 1px solid #f0f0f0;
