--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -46,4 +46,17 @@
       }
     }
   }
+
+  .profile-content {
+    margin-bottom: 16px;
+  }
+
+  .user-avatar {
+    text-align: center;
+  }
+
+  .user-name {
+    text-align: center;
+    font-size: 120%;
+  }
 }
