Add counts to clinical trial browse table

--- a/client/src/app/views/clinical-trials/clinical-trials-home/clinical-trials-home.page.html
+++ b/client/src/app/views/clinical-trials/clinical-trials-home/clinical-trials-home.page.html
@@ -9,7 +9,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-clinical-trials-table></cvc-clinical-trials-table>
+          <cvc-clinical-trials-table cvcTitle="Browse Clinical Trials"></cvc-clinical-trials-table>
         </div>
       </div>
     </div>
