--- a/client/src/app/views/organizations/organizations-assertions/organizations-assertions.component.html
+++ b/client/src/app/views/organizations/organizations-assertions/organizations-assertions.component.html
@@ -1,5 +1,1 @@
-<cvc-assertions-table [organizationId]="organizationId" [cvcTitleTemplate]="assertionsCardTitle"></cvc-assertions-table>
-<ng-template #assertionsCardTitle>
-  <i nz-icon nzType="civic:assertion"></i>
-  Organization Assertions
-</ng-template>
+<cvc-assertions-table [organizationId]="organizationId" cvcTitle="Organization Assertions"></cvc-assertions-table>
