--- a/client/src/app/views/users/users-assertions/users-assertions.component.html
+++ b/client/src/app/views/users/users-assertions/users-assertions.component.html
@@ -1,5 +1,1 @@
-<cvc-assertions-table [userId]="userId" [cvcTitleTemplate]="assertionsCardTitle"></cvc-assertions-table>
-<ng-template #assertionsCardTitle>
-  <i nz-icon nzType="civic:assertion"></i>
-  User Assertions
-</ng-template>
+<cvc-assertions-table [userId]="userId" cvcTitle]="User Assertions"></cvc-assertions-table>
