--- a/client/src/app/views/curation/curation-queues/pending-evidence/pending-evidence.page.html
+++ b/client/src/app/views/curation/curation-queues/pending-evidence/pending-evidence.page.html
@@ -1,1 +1,1 @@
-<cvc-evidence-table [status]="status"></cvc-evidence-table>
+<cvc-evidence-table [status]="status" cvcTitle="Browse Pending Evidence"></cvc-evidence-table>
