--- a/client/src/app/views/evidence/evidence-home/evidence-home.page.html
+++ b/client/src/app/views/evidence/evidence-home/evidence-home.page.html
@@ -26,7 +26,7 @@
     <nz-row *ngIf="tableView">
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-evidence-table></cvc-evidence-table>
+          <cvc-evidence-table cvcTitle="Browse Evidence"></cvc-evidence-table>
         </div>
       </div>
     </nz-row>
