--- a/client/src/app/views/organizations/organizations-evidence/organizations-evidence.component.html
+++ b/client/src/app/views/organizations/organizations-evidence/organizations-evidence.component.html
@@ -1,7 +1,1 @@
-<cvc-entity-table-card [cvcTitle]="evidenceCardTitle">
-  <cvc-evidence-table [organizationId]="organizationId"></cvc-evidence-table>
-</cvc-entity-table-card>
-<ng-template #evidenceCardTitle>
-  <i nz-icon nzType="civic:evidence"></i>
-  Organization Evidence
-</ng-template>
+<cvc-evidence-table [organizationId]="organizationId" cvcTitle="Organization Evidence"></cvc-evidence-table>
