--- a/client/src/app/views/users/users-evidence/users-evidence.component.html
+++ b/client/src/app/views/users/users-evidence/users-evidence.component.html
@@ -1,7 +1,1 @@
-<cvc-entity-table-card [cvcTitle]="evidenceCardTitle">
-  <cvc-evidence-table [userId]="userId"></cvc-evidence-table>
-</cvc-entity-table-card>
-<ng-template #evidenceCardTitle>
-  <i nz-icon nzType="civic:evidence"></i>
-  User Evidence
-</ng-template>
+<cvc-evidence-table [userId]="userId" cvcTitle="User Evidence"></cvc-evidence-table>
