Add counts to disease table

--- a/client/src/app/views/diseases/diseases-home/diseases-home.page.html
+++ b/client/src/app/views/diseases/diseases-home/diseases-home.page.html
@@ -12,7 +12,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-diseases-table></cvc-diseases-table>
+          <cvc-diseases-table cvcTitle="Browse Diseases"></cvc-diseases-table>
         </div>
       </div>
     </div>
