--- a/client/src/app/views/organizations/organizations-detail/organizations-detail.component.less
+++ b/client/src/app/views/organizations/organizations-detail/organizations-detail.component.less
@@ -1,1 +1,8 @@
 @import 'themes/overrides/entity-page-header.overrides.less';
+
+.detail-content {
+  margin-top: 8px;
+}
+.content {
+  margin-bottom: 8px;
+}
