--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -48,7 +48,12 @@
   }
 
   .profile-content {
+    margin-top: 8px;
     margin-bottom: 16px;
+  }
+
+  .content {
+    margin-bottom: 8px;
   }
 
   .user-avatar {
