--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -60,6 +60,10 @@
     text-align: center;
   }
 
+  .user-socials {
+    text-align: center;
+  }
+
   .user-name {
     text-align: center;
     font-size: 120%;
