--- a/client/src/app/components/variants/my-variant-info/my-variant-info.component.html
+++ b/client/src/app/components/variants/my-variant-info/my-variant-info.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="variantInfo">
     <nz-card nzTitle="MyVariantInfo">
       <nz-card-tab>
-        <nz-tabset nzSize="small" (nzSelectChange)="tabChange($event)" [nzAnimated]="true">
+        <nz-tabset nzSize="small" (nzSelectedIndexChange)="tabChange($event)" [nzAnimated]="true">
           <nz-tab nzTitle="Overview"> </nz-tab>
           <nz-tab nzTitle="ClinVar"> </nz-tab>
           <nz-tab nzTitle="gnomAD (2.1.1)"></nz-tab>
