Add counts to organization browse table

--- a/client/src/app/views/organizations/organizations-home/organizations-home.page.html
+++ b/client/src/app/views/organizations/organizations-home/organizations-home.page.html
@@ -11,7 +11,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-organizations-table></cvc-organizations-table>
+          <cvc-organizations-table cvcTitle="Browse Organizations"></cvc-organizations-table>
         </div>
       </div>
     </div>
